@@ -115,7 +115,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             name="Unhealable"
             generate_name=yes
             [status]
-                healable=no
+                unhealable=yes
             [/status]
         [/unit]
         [unit]
